--- a/website/client/index.html
+++ b/website/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="./static/IoT_Favicon.ico"/>
-    <title>Dashboard</title>
+    <title>Dashboard | Weathernaut</title>
   </head>
   <body>
     <div id="app"></div>
